<resources>
    <string name="log_in">Zaloguj się</string>
    <string name="sign_up">Zarejestruj się</string>

    <string name="image_description_default">Image</string>
    <string name="image_description_divider">Divider</string>

    <string name="login_header">Logowanie</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Hasło</string>
    <string name="login_forgot_password">Nie pamiętasz hasła?</string>
    <string name="login_sign_in_with_google">Kontynuuj przez Google</string>

    <string name="register_header">Rejestracja</string>
    <string name="register_username">Imię/Pseudonim</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Hasło</string>
    <string name="register_repeat_password">Powtórz hasło</string>
    <string name="register_sign_up">Zarejestruj się</string>
    <string name="register_user_created_success">Użytkownik utworzony pomyślnie!</string>

    <string name="accept">Akceptuję warunki regulaminu korzystania z aplikacji Timefulness oraz
        zgadzam się na wszelkie zmiany w przyszłości. Rozumiem również że mam prawo odstąpienia
        od umowy oraz, że moje dane są przechowywane przez twórców aplikacji.</string>

    <string name="profile_welcome_message">Witaj %1$s!</string>
    <string name="profile_welcome_message_placeholder">Witaj Karolina!</string>
    <string name="profile_email_placeholder">karolcia23@mojapoczta.pl</string>
    <string name="profile_people_image_description">Zdjęcie z grupą osób</string>
    <string name="profile_tasks_completed_for_today">Wykonane zadania na dziś:</string>
    <string name="profile_task_count_placeholder">0</string>
    <string name="profile_task_count_divider">/</string>
    <string name="profile_effectiveness">Skuteczność:</string>
    <string name="profile_task_completion_percentage">%1$d%%</string>
    <string name="profile_task_completion_percentage_placeholder">68%</string>
    <string name="profile_logout">Wyloguj</string>

    <string name="other_technique_title_placeholder">Tytuł techiki</string>
    <string name="other_technique_description_placeholder">Opis techniki</string>
    <string name="other_technique_image_description">Zdjęcie z osobą przy biurku</string>
    <string name="other_advice_title">Porada na dziś</string>
    <string name="other_advice_description_placeholder">Opis porady</string>
    <string name="other_pomodoro_minute_placeholder">25</string>
    <string name="other_pomodoro_seconds_placeholder">00</string>
    <string name="other_pomodoro_colon">:</string>
    <string name="other_pomodoro_title">Timer Pomodoro</string>
    <string name="other_pomodoro_start">Start</string>
    <string name="other_pomodoro_normal">25 min</string>
    <string name="other_pomodoro_short_break">5 min</string>
    <string name="other_pomodoro_long_break">15 min</string>

    <string name="add_back_button_description">Navigation back button</string>
    <string name="add_task_name_label">Nazwa zadania</string>
    <string name="add_task_name_hint">Wprowadź nazwę zadania…</string>
    <string name="add_when">Kiedy?</string>
    <string name="add_from">Od:</string>
    <string name="add_to">Do:</string>
    <string name="add_category_label">Kategoria:</string>
    <string name="add_category_image_description">Kategoria zadania</string>
    <string name="add_save">Dodaj</string>
    <string name="add_update">Zmień</string>
    <string name="add_delete">Usuń</string>
    <string name="add_delete_rationale">Czy na pewno chcesz usunąć to zadanie?</string>
    <string name="add_delete_rationale_positive">Tak</string>
    <string name="add_delete_rationale_negative">Nie</string>
    <string name="add_corner_image_background_description">Tło w kształcie gwiazdy</string>
    <string name="add_corner_image_description">Kobieta na tle kalendarza</string>
    <string name="add_error_task_name_invalid">Nazwa zadania jest niepoprawna</string>
    <string name="add_error_task_name_short">Nazwa zadania jest zbyt krótka</string>
    <string name="add_error_task_name_long">Nazwa zadania jest zbyt długa</string>
    <string name="add_error_task_name_invalid_characters">Nazwa zadania nie powinna zawierać znaków specjalnych</string>

    <string name="today_tasks_for_today">Zadania na dzisiaj:</string>
    <string name="today_no_tasks_added">Nie dodałeś/aś jeszcze żadnych zadań na dzisiaj.</string>

    <string name="dialog_task_details_date_label">Data:</string>
    <string name="dialog_task_details_from_label">Od:</string>
    <string name="dialog_task_details_to_label">Do:</string>
    <string name="dialog_task_details_category_label">Kategoria:</string>
    <string name="dialog_task_details_completed">Wykonane?</string>
    <string name="dialog_task_details_delete">Usuń</string>
    <string name="dialog_task_details_edit">Edytuj</string>

    <string name="menu_other">Inne</string>
    <string name="menu_calendar">Kalendarz</string>
    <string name="menu_today">Dzisiaj</string>
    <string name="menu_profile">Mój profil</string>

    <string name="regular_event">Regular event</string>
    <string name="week">Week</string>
</resources>