<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="17dp"
    app:strokeColor="@color/purpleMain"
    app:strokeWidth="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/heebo_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="@string/other_technique_title_placeholder" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title"
            android:layout_marginBottom="11dp"
            app:dividerColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/heebo"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="@string/other_technique_description_placeholder" />

            <ImageView
                android:id="@+id/techniqueImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/other_technique_image_description"
                android:src="@drawable/ic_person_at_desk" />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>