<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/greenMain"
    app:cardCornerRadius="20dp"
    app:strokeColor="@color/profile_user_card_border"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/navigationBarBackground"
            android:padding="1dp"
            android:src="@drawable/profile_picture_placeholder"
            app:shapeAppearanceOverlay="@style/circle"
            app:strokeColor="@color/profile_image_border"
            app:strokeWidth="1dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/profileImage"
            android:ellipsize="end"
            android:fontFamily="@font/heebo"
            android:text="@string/profile_welcome_message_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTextView"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/profileImage"
            android:ellipsize="end"
            android:fontFamily="@font/heebo"
            android:text="@string/profile_email_placeholder"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/profile_people_image_description"
            android:src="@drawable/group_of_people" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>